--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <div class="container pt-3">
             <h1 class="text-center" id="title">Happy Birthday!</h1>
             <div class="container d-flex flex-column" id="jam">
-                <p class="mb-1 mt-4 ps-2" id="">
+                <p class="mb-1 mt-4 ps-2" id="cie">
                     Habede Isna! selamat, lu udah menempuh hidup kurang lebih:
                 </p>
                 <div class="row text-center mb-3 mt-2">
