--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
           Your browser does not support the video tag.
           </video>
           <img src="images/loadCat.png" alt="" id="cat"/>
-          <h1 id="">There's a give for you!</h1>
+          <h1 id="noVid">There's a give for you!</h1>
           <div class="justify-content-center mt-3">
             <i class="bi bi-play btn btn-primary me-2" onclick="playVideo();"></i>
             <i class="bi bi-skip-forward btn btn-warning text-white" onclick="skip();"></i>
